# free-games-notifier

./: .gitignore  Cargo.toml  NOTICE  README.md  settings.toml.example
src/: app.rs  config.rs  db.rs  discord.rs  epic.rs  epic_client.rs  epic_logic.rs  format.rs  lib.rs  main.rs  notifier.rs  time.rs
src/app/: epic.rs  mod.rs
src/epic/: client.rs  http.rs  mod.rs  schema.rs
src/notifier/: capture.rs  discord.rs  logging.rs  mod.rs
src/offer_store/: mod.rs  sqlite.rs
tests/: app_epic_handle.rs  handle_epic.rs
tests/fixtures/: epic_bundle_promo.json  epic_multiple_promo.json  epic_null_surface_product_slug.json  epic_single_promo.json
