[package]
name = "free-games-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
